<resources>
    <!-- login -->
    <string name="app_name">StuckyToys</string>
    <string name="email">E-mailadres</string>
    <string name="password">Wachtwoord</string>
    <string name="login">Aanmelden</string>
    <string name="not_registered"><u>Nog geen account?</u></string>
    <string name="exit">Wens je af te sluiten?</string>
    <string name="connection_error">Kon niet verbinden met de server, controleer je internetverbinding en probeer het later nog eens.</string>

    <!-- register -->
    <string name="username">Gebruikersnaam</string>
    <string name="first_name">Voornaam</string>
    <string name="nickname">Bijnaam</string>
    <string name="password_repeat">Herhaal wachtwoord</string>
    <string name="register">Registreren</string>
    <string name="date_of_birth">Geboortedatum</string>
    <string name="fill_all_fields">Gelieve alle gegevens in te vullen.</string>
    <string name="invalid_email">E-mailadres is niet geldig</string>
    <string name="different_passwords">Wachtwoorden komen niet overeen.</string>
    <string name="register_cancel">Registeren annuleren?</string>

    <!-- selectmember -->
    <string name="select_member">Selecteer een familielid</string>
    <string name="add_member">Nieuw familielid toevoegen</string>
    <string name="logout">Wens je uit te loggen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>

    <!--addmember -->
    <string name="confirm">Bevestigen</string>
    <string name="add_member_cancel">Familielid aanmaken annuleren?</string>
    <string name="select_picture">Welk dier past het best bij jou?</string>
    <string name="role">Rol in het gezin</string>
    <string name="role_hint"><font size="10">papa, mama, zoon, dochter,...</font></string>
    <string name="authority">Ben je een beheerder voor deze account (bvb ouder, leerkracht)?</string>
    <string name="didnt_select_image">Gelieve een afbeelding te kiezen.</string>

    <!-- homepage -->
    <string name="my_stories">Mijn verhalen</string>
    <string name="agenda">Agenda</string>
    <string name="my_pictures">Mijn figuren</string>
    <string name="messages">Boodschappen</string>

    <!--storyoverview -->
    <string name="select_story">Welkom %s</string>
    <string name="date">Datum toegevoegd: </string>
    <string name="scenes">Aantal scene\'s:</string>
    <string name="themes">Thema\'s die aan bod komen:</string>
    <string name="start_story">Begin verhaal</string>
    <string name="buy_story">Koop verhaal</string>
    <string name="sort_by">\t\t\tSorteren op:</string>
    <string-array name="sort_options">
        <item>Naam</item>
        <item>Datum</item>
        <item>Gekocht</item>
    </string-array>
    <string name="confirm_buy_story">Verhaal kopen?</string>

    <string name="scene1">Iedereen stapt in en is klaar om te vertrekken. Dan gooit een vervuiler een blikje op straat! Tuut de vervuiler weg!</string>
    <string name="scene2">Gooi het blikje nu in de vuilbak.</string>
    <string name="next_scene">Volgende scene</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
