<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="projecten3.stuckytoys.fragments.StoryDetailsFragment">

    <TextView
        android:id="@+id/storyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1" />
        <projecten3.stuckytoys.custom.MemberImageView
            android:id="@+id/storyImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/storyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scenes"/>

            <TextView
                android:id="@+id/storyScenes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/themes"/>

            <TextView
                android:id="@+id/storyThemes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </GridLayout>
    </ScrollView>

</LinearLayout>
