<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projecten3.stuckytoys.HomeActivity">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/secondView"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:id="@+id/btnMyStories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/placerholderpic"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/txtMyStories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_stories"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/placerholderpic"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/agenda"
                android:gravity="center_horizontal"/>

        </LinearLayout>



    </LinearLayout>

    <View
        android:id="@+id/secondView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/thirdLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/secondView"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:id="@+id/btnMyPictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/placerholderpic"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_pictures"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/placerholderpic"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages"
                android:gravity="center_horizontal"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
