<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="projecten3.stuckytoys.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/txtFirstName"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"/>

                <EditText
                    android:id="@+id/editFirstName"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:textCursorDrawable="@null" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/txtNickname"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"/>

                <EditText
                    android:id="@+id/editNickname"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:textCursorDrawable="@null" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/txtGeboortedatum"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"/>
                <EditText
                    android:id="@+id/editDateOfBirth"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:backgroundTint="@android:color/holo_blue_light"/>
            </TableRow>

            <GridView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gridImages"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:verticalSpacing="20dp"
                android:horizontalSpacing="20dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:gravity="center" />

            <TextView
                android:id="@+id/txtError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dip" />

            <Button
                android:id="@+id/btnAddMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/confirm"/>

        </TableLayout>
    </LinearLayout>
</ScrollView>
